--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,6 +21,19 @@ jobs:
     
     runs-on: macos-latest
     steps:
+      - name: Install GNU Make
+        run: |
+          brew update
+          brew install make
+
+      - name: Install Java 8 (Temurin) via Homebrew
+        run: |
+          brew install --cask temurin@8
+
+      - name: Install ldid
+        run: |
+          brew install ldid
+          
       - name: Remove work folders
         run: |
           echo "before"
@@ -29,10 +42,6 @@ jobs:
           rm -rf ./.??* || true
           echo "after"
           ls -lah ./
-          brew update
-          brew install make
-          brew install --cask temurin@8
-          brew install ldid
           
       - name: Checkout repository
         uses: actions/checkout@main
@@ -86,7 +95,7 @@ jobs:
       - name: Build for ${{ matrix.platform_name }}
         run: |
           export PATH=/opt/homebrew/bin:$PATH
-          export SLIMMED=1
+          export SLIMMED=0
           if [ "${{ matrix.platform_name }}" == "ios" ]; then
             # Build ipa and tipa for iOS
             gmake -j$(sysctl -n hw.ncpu) dsym package PLATFORM=${{ matrix.platform }}
@@ -98,6 +107,21 @@ jobs:
             # Build ipa only for everything else
             gmake -j$(sysctl -n hw.ncpu) dsym package PLATFORM=${{ matrix.platform }}
           fi
+
+      - name: Build for simulator
+        run: |
+          export PATH=/opt/homebrew/bin:$PATH
+          export SLIMMED=1
+          gmake -j$(sysctl -n hw.ncpu) dsym package PLATFORM=7
+
+      - name: Repackage simulator build for Appetize.io
+        run: |
+          IPA_PATH=$(find artifacts -name "org.angelauramc.amethyst-*-iossimulator.ipa")
+          mkdir -p temp
+          unzip "$IPA_PATH" -d temp
+          cd temp/Payload
+          zip -r ../../org.angelauramc.amethyst-ios-simulator.app.zip .
+        shell: bash
 
       - name: Upload regular ipa
         uses: actions/upload-artifact@main
@@ -129,3 +153,9 @@ jobs:
         with:
           name: AngelAuraAmethyst.dSYM
           path: artifacts/AngelAuraAmethyst.dSYM
+
+      - name: Upload simulator build for Appetize.io
+        uses: actions/upload-artifact@main
+        with:
+          name: org.angelauramc.amethyst-ios-simulator.app.zip
+          path: org.angelauramc.amethyst-ios-simulator.app.zip
